# Snake-Game

./: CMakeLists.txt  README
dependencies/glad/: glad.h
src/: App.cpp  App.h  Game.cpp  Game.h  Types.h  config.h  main.cpp
